--- a/QuanLyNhanVien/index.html
+++ b/QuanLyNhanVien/index.html
@@ -154,7 +154,7 @@
                       class="form-control"
                       placeholder="Loại nhân viên"
                       id="searchName"
-					  onchange="timKiem()"
+                      oninput="timKiem()"
                     />
                     <div class="input-group-prepend">
                       <span class="input-group-text" id="btnTimNV"
